Package_Tools/include-C/efl/fertig/emotion-1/fertig/Emotion.h


enum _Emotion_Meta_Info
{
   EMOTION_META_INFO_TRACK_TITLE, 
   EMOTION_META_INFO_TRACK_ARTIST, 
   EMOTION_META_INFO_TRACK_ALBUM, 
   EMOTION_META_INFO_TRACK_YEAR, 
   EMOTION_META_INFO_TRACK_GENRE, 
   EMOTION_META_INFO_TRACK_COMMENT, 
   EMOTION_META_INFO_TRACK_DISC_ID, 
   EMOTION_META_INFO_TRACK_COUNT 
};
enum _Emotion_Vis
{
  EMOTION_VIS_NONE, 
  EMOTION_VIS_GOOM, 
  EMOTION_VIS_LIBVISUAL_BUMPSCOPE, 
  EMOTION_VIS_LIBVISUAL_CORONA, 
  EMOTION_VIS_LIBVISUAL_DANCING_PARTICLES, 
  EMOTION_VIS_LIBVISUAL_GDKPIXBUF, 
  EMOTION_VIS_LIBVISUAL_G_FORCE, 
  EMOTION_VIS_LIBVISUAL_GOOM, 
  EMOTION_VIS_LIBVISUAL_INFINITE, 
  EMOTION_VIS_LIBVISUAL_JAKDAW, 
  EMOTION_VIS_LIBVISUAL_JESS, 
  EMOTION_VIS_LIBVISUAL_LV_ANALYSER, 
  EMOTION_VIS_LIBVISUAL_LV_FLOWER, 
  EMOTION_VIS_LIBVISUAL_LV_GLTEST, 
  EMOTION_VIS_LIBVISUAL_LV_SCOPE, 
  EMOTION_VIS_LIBVISUAL_MADSPIN, 
  EMOTION_VIS_LIBVISUAL_NEBULUS, 
  EMOTION_VIS_LIBVISUAL_OINKSIE, 
  EMOTION_VIS_LIBVISUAL_PLASMA, 
  EMOTION_VIS_LAST 
};
typedef enum
{
  EMOTION_WAKEUP, 
  EMOTION_SLEEP, 
  EMOTION_DEEP_SLEEP, 
  EMOTION_HIBERNATE 
} Emotion_Suspend;
typedef enum _Emotion_Meta_Info Emotion_Meta_Info; 
typedef enum _Emotion_Vis       Emotion_Vis; 
extern void         emotion_object_video_subtitle_file_set (Evas_Object *obj, const char *filepath);
extern const char   *emotion_object_video_subtitle_file_get (const Evas_Object *obj);
extern int          emotion_object_video_channel_count   (const Evas_Object *obj);
extern const char  *emotion_object_video_channel_name_get(const Evas_Object *obj, int channel);
extern void         emotion_object_video_channel_set     (Evas_Object *obj, int channel);
extern int          emotion_object_video_channel_get     (const Evas_Object *obj);
extern void         emotion_object_spu_mute_set          (Evas_Object *obj, Eina_Bool mute);
extern Eina_Bool    emotion_object_spu_mute_get          (const Evas_Object *obj);
extern int          emotion_object_spu_channel_count     (const Evas_Object *obj);
extern const char  *emotion_object_spu_channel_name_get  (const Evas_Object *obj, int channel);
extern void         emotion_object_spu_channel_set       (Evas_Object *obj, int channel);
extern int          emotion_object_spu_channel_get       (const Evas_Object *obj);
extern int          emotion_object_chapter_count         (const Evas_Object *obj);
extern void         emotion_object_chapter_set           (Evas_Object *obj, int chapter);
extern int          emotion_object_chapter_get           (const Evas_Object *obj);
extern const char  *emotion_object_chapter_name_get      (const Evas_Object *obj, int chapter);
extern void         emotion_object_eject                 (Evas_Object *obj);
extern const char  *emotion_object_title_get             (const Evas_Object *obj);
extern const char  *emotion_object_ref_file_get          (const Evas_Object *obj);
extern int          emotion_object_ref_num_get           (const Evas_Object *obj);
extern int          emotion_object_spu_button_count_get  (const Evas_Object *obj);
extern int          emotion_object_spu_button_get        (const Evas_Object *obj);
extern const char  *emotion_object_meta_info_get         (const Evas_Object *obj, Emotion_Meta_Info meta);
extern void         emotion_object_vis_set               (Evas_Object *obj, Emotion_Vis visualization);
extern Emotion_Vis  emotion_object_vis_get               (const Evas_Object *obj);
extern Eina_Bool    emotion_object_vis_supported         (const Evas_Object *obj, Emotion_Vis visualization);
extern void         emotion_object_priority_set(Evas_Object *obj, Eina_Bool priority);
extern Eina_Bool    emotion_object_priority_get(const Evas_Object *obj);
extern void         emotion_object_suspend_set(Evas_Object *obj, Emotion_Suspend state);
extern Emotion_Suspend emotion_object_suspend_get(Evas_Object *obj);
extern void         emotion_object_last_position_load(Evas_Object *obj);
extern void         emotion_object_last_position_save(Evas_Object *obj);
extern Eina_Bool    emotion_object_extension_may_play_fast_get(const char *file);
extern Eina_Bool    emotion_object_extension_may_play_get(const char *file);
extern Evas_Object *emotion_object_image_get(const Evas_Object *obj);
typedef struct _Emotion_Webcam Emotion_Webcam; 