Package_Tools/include-C/efl/emotion-1/Emotion.pp

{*
 * @brief Get the video's subtitle file path.
 *
 * @param obj The object which we are retrieving the subtitle file path from.
 * @return The video's subtitle file path previously set, NULL otherwise.
 *
 * This function returns the video's subtitle file path, if not previously set
 * or in error NULL is returned.
 *
 * @see emotion_object_video_subtitle_file_set().
 *
 * @ingroup Emotion_Video
 * @since 1.8
  }
(* Const before type ignored *)
(* Const before type ignored *)
function emotion_object_video_subtitle_file_get(obj:PEvas_Object):Pchar;cdecl;external;
{*
 * @brief Get the number of available video channel
 *
 * @param obj The object which we are retrieving the channel count from
 * @return the number of available channel.
 *
 * @see emotion_object_video_channel_name_get()
 *
 * @ingroup Emotion_Video
  }
(* Const before type ignored *)
function emotion_object_video_channel_count(obj:PEvas_Object):longint;cdecl;external;
{*
 * @brief Get the name of a given video channel
 *
 * @param obj The object which we are retrieving the channel name from
 * @param channel the channel number
 * @return the channel name.
 *
 * @see emotion_object_video_channel_count()
 *
 * @ingroup Emotion_Video
  }
(* Const before type ignored *)
(* Const before type ignored *)
function emotion_object_video_channel_name_get(obj:PEvas_Object; channel:longint):Pchar;cdecl;external;
{*
 * @brief Set the channel for a given video object
 *
 * @param obj The target object which we are setting the channel
 * @param channel the channel number to be setted.
 *
 * @ingroup Emotion_Video
  }
procedure emotion_object_video_channel_set(obj:PEvas_Object; channel:longint);cdecl;external;
{*
 * @brief Get the channel for a given video object
 *
 * @param obj The target object which we are getting the channel
 * @return The current channel number.
 *
 * @ingroup Emotion_Video
  }
(* Const before type ignored *)
function emotion_object_video_channel_get(obj:PEvas_Object):longint;cdecl;external;
procedure emotion_object_spu_mute_set(obj:PEvas_Object; mute:TEina_Bool);cdecl;external;
(* Const before type ignored *)
function emotion_object_spu_mute_get(obj:PEvas_Object):TEina_Bool;cdecl;external;
(* Const before type ignored *)
function emotion_object_spu_channel_count(obj:PEvas_Object):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function emotion_object_spu_channel_name_get(obj:PEvas_Object; channel:longint):Pchar;cdecl;external;
procedure emotion_object_spu_channel_set(obj:PEvas_Object; channel:longint);cdecl;external;
(* Const before type ignored *)
function emotion_object_spu_channel_get(obj:PEvas_Object):longint;cdecl;external;
(* Const before type ignored *)
function emotion_object_chapter_count(obj:PEvas_Object):longint;cdecl;external;
procedure emotion_object_chapter_set(obj:PEvas_Object; chapter:longint);cdecl;external;
(* Const before type ignored *)
function emotion_object_chapter_get(obj:PEvas_Object):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function emotion_object_chapter_name_get(obj:PEvas_Object; chapter:longint):Pchar;cdecl;external;
procedure emotion_object_eject(obj:PEvas_Object);cdecl;external;
{*
 * @brief Get the dvd title from this emotion object.
 *
 * @param obj The object which the title will be retrieved from.
 * @return A string containing the title.
 *
 * This function is only useful when playing a DVD.
 *
 * @note Don't change or free the string returned by this function.
 *
 * @ingroup Emotion_Info
  }
(* Const before type ignored *)
(* Const before type ignored *)
function emotion_object_title_get(obj:PEvas_Object):Pchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function emotion_object_ref_file_get(obj:PEvas_Object):Pchar;cdecl;external;
(* Const before type ignored *)
function emotion_object_ref_num_get(obj:PEvas_Object):longint;cdecl;external;
(* Const before type ignored *)
function emotion_object_spu_button_count_get(obj:PEvas_Object):longint;cdecl;external;
(* Const before type ignored *)
function emotion_object_spu_button_get(obj:PEvas_Object):longint;cdecl;external;
{*
 * @brief Retrieve meta information from this file being played.
 *
 * @param obj The object which the meta info will be extracted from.
 * @param meta The type of meta information that will be extracted.
 *
 * This function retrieves information about the file loaded. It can retrieve
 * the track title, artist name, album name, etc. See @ref Emotion_Meta_Info
 * for all the possibilities.
 *
 * The meta info may be not available on all types of files. It will return @c
 * NULL if the the file doesn't have meta info, or if this specific field is
 * empty.
 *
 * @note Don't change or free the string returned by this function.
 *
 * @see Emotion_Meta_Info
 *
 * @ingroup Emotion_Info
  }
(* Const before type ignored *)
(* Const before type ignored *)
function emotion_object_meta_info_get(obj:PEvas_Object; meta:TEmotion_Meta_Info):Pchar;cdecl;external;
{*
 * @brief Set the visualization to be used with this object.
 *
 * @param obj The object where the visualization will be set on.
 * @param visualization The type of visualization to be used.
 *
 * The @p visualization specified will be played instead of a video. This is
 * commonly used to display a visualization for audio only files (musics).
 *
 * The available visualizations are @ref Emotion_Vis.
 *
 * @see Emotion_Vis
 * @see emotion_object_vis_get()
 * @see emotion_object_vis_supported()
 *
 * @ingroup Emotion_Visualization
  }
procedure emotion_object_vis_set(obj:PEvas_Object; visualization:TEmotion_Vis);cdecl;external;
{*
 * @brief Get the type of visualization in use by this emotion object.
 *
 * @param obj The emotion object which the visualization is being retrieved
 * from.
 * @return The type of visualization in use by this object.
 *
 * The type of visualization can be set by emotion_object_vis_set().
 *
 * @see Emotion_Vis
 * @see emotion_object_vis_set()
 * @see emotion_object_vis_supported()
 *
 * @ingroup Emotion_Visualization
  }
(* Const before type ignored *)
function emotion_object_vis_get(obj:PEvas_Object):TEmotion_Vis;cdecl;external;
{*
 * @brief Query whether a type of visualization is supported by this object.
 *
 * @param obj The object which the query is being ran on.
 * @param visualization The type of visualization that is being queried.
 * @return EINA_TRUE if the visualization is supported, EINA_FALSE otherwise.
 *
 * This can be used to check if a visualization is supported. e.g.: one wants to
 * display a list of available visualizations for a specific object.
 *
 * @see Emotion_Vis
 * @see emotion_object_vis_set()
 * @see emotion_object_vis_get()
 *
 * @ingroup Emotion_Visualization
  }
(* Const before type ignored *)
function emotion_object_vis_supported(obj:PEvas_Object; visualization:TEmotion_Vis):TEina_Bool;cdecl;external;
{*
 * @brief Raise priority of an object so it will have a priviledged access to hardware resources.
 *
 * @param obj The object which the query is being ran on.
 * @param priority EINA_TRUE means give me a priority access to the hardware resources.
 *
 * Hardware have a few dedicated hardware pipeline that process the video at no cost for the CPU.
 * Especially on SoC, you mostly have one (on mobile phone SoC) or two (on Set Top Box SoC) when
 * Picture in Picture is needed. And most application just have a few video stream that really
 * deserve high frame rate, high quality output. That's why this call is for.
 *
 * Please note that if Emotion can't acquire a priviledged hardware resource, it will fallback
 * to the no-priority path. This work on the first asking first get basis system.
 *
 * @see emotion_object_priority_get()
 *
 * @ingroup Emotion_Ressource
  }
procedure emotion_object_priority_set(obj:PEvas_Object; priority:TEina_Bool);cdecl;external;
{*
 * @brief Get the actual priority of an object.
 *
 * @param obj The object which the query is being ran on.
 * @return EINA_TRUE if the object has a priority access to the hardware.
 *
 * This actually return the priority status of an object. If it failed to have a priviledged
 * access to the hardware, it will return EINA_FALSE.
 *
 * @see emotion_object_priority_get()
 *
 * @ingroup Emotion_Ressource
  }
(* Const before type ignored *)
function emotion_object_priority_get(obj:PEvas_Object):TEina_Bool;cdecl;external;
{*
 * @brief Change the state of an object pipeline.
 *
 * @param obj The object which the query is being ran on.
 * @param state The new state for the object.
 *
 * Changing the state of a pipeline should help preserve the battery of an embedded device.
 * But it will only work sanely if the pipeline is not playing at the time you change its
 * state. Depending on the engine all state may be not implemented.
 *
 * @see Emotion_Suspend
 * @see emotion_object_suspend_get()
 *
 * @ingroup Emotion_Ressource
  }
procedure emotion_object_suspend_set(obj:PEvas_Object; state:TEmotion_Suspend);cdecl;external;
{*
 * @brief Get the current state of the pipeline
 *
 * @param obj The object which the query is being ran on.
 * @return the current state of the pipeline.
 *
 * @see Emotion_Suspend
 * @see emotion_object_suspend_set()
 *
 * @ingroup Emotion_Ressource
  }
function emotion_object_suspend_get(obj:PEvas_Object):TEmotion_Suspend;cdecl;external;
{*
 * @brief Load the last known position if available
 *
 * @param obj The object which the query is being ran on.
 *
 * By using Xattr, Emotion is able, if the system permitt it, to store and retrieve
 * the latest position. It should trigger some smart callback to let the application
 * know when it succeed or fail. Every operation is fully asynchronous and not
 * linked to the actual engine used to play the vide.
 *
 * @see emotion_object_last_position_save()
 *
 * @ingroup Emotion_Info
  }
procedure emotion_object_last_position_load(obj:PEvas_Object);cdecl;external;
{*
 * @brief Save the lastest position if possible
 *
 * @param obj The object which the query is being ran on.
 *
 * By using Xattr, Emotion is able, if the system permitt it, to store and retrieve
 * the latest position. It should trigger some smart callback to let the application
 * know when it succeed or fail. Every operation is fully asynchronous and not
 * linked to the actual engine used to play the vide.
 *
 * @see emotion_object_last_position_load()
 *
 * @ingroup Emotion_Info
  }
procedure emotion_object_last_position_save(obj:PEvas_Object);cdecl;external;
{*
 * @brief Do we have a chance to play that file
 *
 * @param file A stringshared filename that we want to know if Emotion can play.
 *
 * This just actually look at the extension of the file, it doesn't check the mime-type
 * nor if the file is actually sane. So this is just an hint for your application.
 *
 * @see emotion_object_extension_may_play_get()
  }
(* Const before type ignored *)
function emotion_object_extension_may_play_fast_get(file:Pchar):TEina_Bool;cdecl;external;
{*
 * @brief Do we have a chance to play that file
 *
 * @param file A filename that we want to know if Emotion can play.
 *
 * This just actually look at the extension of the file, it doesn't check the mime-type
 * nor if the file is actually sane. So this is just an hint for your application.
 *
 * @see emotion_object_extension_may_play_fast_get()
  }
(* Const before type ignored *)
function emotion_object_extension_may_play_get(file:Pchar):TEina_Bool;cdecl;external;
{*
 * @brief Get the actual image object that contains the pixels of the video stream
 *
 * @param obj The object which the query is being ran on.
 *
 * This function is useful when you want to get a direct access to the pixels.
 *
 * @see emotion_object_image_get()
  }
(* Const before type ignored *)
function emotion_object_image_get(obj:PEvas_Object):PEvas_Object;cdecl;external;
{*
 * @defgroup Emotion_Webcam API available for accessing webcam
 * @ingroup Emotion
  }
